--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "pdfmake": "^0.2.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-pdf": "^7.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
