--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.13",
     "@react-pdf-viewer/core": "^3.12.0",
-    "pdfmake": "^0.2.7",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "lucide-react": "^0.292.0",
+    "pdfjs-dist": "^3.4.120",
+    "pdfmake": "^0.2.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pdf": "^7.5.0"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.7",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
